---------------------------------------------------------------------------------------------------
Version: 0.11.3
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 0.11.2
Date: 2022-09-18
  Bugfixes:
    - [dictionary] Fixed a crash when a player left the game under certain circumstances
---------------------------------------------------------------------------------------------------
Version: 0.11.1
Date: 2022-09-12
  Changes:
    - [dictionary] Added tooltip to GUI header explaining what it is
  Bugfixes:
    - [dictionary] Fixed that translations would stop being requested under certain circumstances
---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 2022-09-04
  Features:
    - [area] Added `area.square()` to turn the area into a square
    - [area] Added `starting_offset` argument to `area.iterate()`
    - [dictionary] Added a GUI that shows translation progress
    - [math] Added `floored` and `ceiled` for flooring and ceiling to N decimal places.
    - [math] Added `sign` to return the signedness of a number as a multiplier
    - [math] Added `sum`, `maximum`, `minimum`, `midrange`, `range` for sets of numbers
  Changes:
    - [math] Deprecated `round_to`, `ceil_to`, `floor_to`
    - [math] `clamp` defaults to clamping between 0, 1 when min or max are not set
    - [dictionary] Removed string nesting to significantly reduce network traffic
      - This makes translation take significantly longer
  Bugfixes:
    - Fixed missing annotations in math and table libraries
    - [dictionary] Fixed that an empty translation would cause the translation after it to be skipped
    - [migration] Fixed a crash when loading the tutorial scenario
---------------------------------------------------------------------------------------------------
Version: 0.10.1
Date: 2022-02-24
  Bugfixes: