@@ -2,6 +2,7 @@
 Version: 0.11.3
 Date: ????
   Features:
+    - Added `data-util.map_energy_value()`
 ---------------------------------------------------------------------------------------------------
 Version: 0.11.2
 Date: 2022-09-18
